got a simple from scratch thing working, there was an issue with the dimention of stuff getting passed into the objective functions

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ git+https://github.com/Lasagne/Lasagne.git
 pandas
 pylab
 #git+https://github.com/Theano/libgpuarray.git
+git+https://github.com/fchollet/keras.git
+#git+https://github.com/lisa-lab/pylearn2.git
